Actualizacion de pagina

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<html >
+<html>
+
 <head>
-   <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 
 
-<body>
+<body class="body">
+
     <header class="header">
         <a href="navbar-brand" href="#">
-        <img id="logo" src="./pixlr-bg-result (1).png" width="120px">
-    </a>
+            <img id="logo" src="./pixlr-bg-result (1).png" width="120px">
+        </a>
+
         <div class="Nav">
             <nav>
                 <ul>
@@ -18,21 +21,40 @@
                     <li><a href="#">Opiniones</a></li>
                     <li><a href="#">Contacto</a></li>
 
-
                 </ul>
             </nav>
         </div>
 
+    </header>
+
+    <div class="Contenedor">
+
+        <div class="recuadro">
+
+            <div class="ContenedorTexto">
+
+                <h2 class="h2"> CAPTURANDO MOMENTOS UNICOS</h2>
+                <p class="texto">
+                    Somos un equipo dedicado a la fotografia y video para que puedas guardar tus mejores recuerdos para siempre.
+                </p>
+                <button class="botonplanes">PLANES</button>
+                <button class="Trabajos">TRABAJOS</button>
+            </div>
+
+            <div class="imagen">
+                
+
+            </div>
+
+
+        </div>
+
+    </div>
 
 
 
 
-    </header>    
 
-
-
-
-
-    
 </body>
+
 </html>
